Add basic profile spoofing detection.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -160,4 +160,6 @@
     <dimen name="group_manage_fragment_row_horizontal_padding">16dp</dimen>
 
     <dimen name="wave_form_bar_width">2dp</dimen>
+
+    <dimen name="review_card_icon_arc_radius">14.5dp</dimen>
 </resources>
