--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,8 @@
     <attr name="search_view_style" format="reference" />
     <attr name="search_view_style_dark" format="reference" />
 
+    <attr name="review_card_bg" format="reference" />
+
     <attr name="title_text_color_primary" format="color"/>
     <attr name="title_text_color_secondary" format="color"/>
     <attr name="title_text_color_disabled" format="color"/>
