Update AppCompat to 1.2 along with other Android UI libraries.

--- a/app/src/main/res/layout/activity_shared_contact_details.xml
+++ b/app/src/main/res/layout/activity_shared_contact_details.xml
@@ -93,7 +93,7 @@
                             android:gravity="center"
                             android:padding="10dp">
 
-                            <ImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="6dp"
@@ -117,7 +117,7 @@
                             android:gravity="center"
                             android:padding="10dp">
 
-                            <ImageView
+                            <androidx.appcompat.widget.AppCompatImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="6dp"
