--- a/app/src/main/res/layout/giphy_activity_toolbar.xml
+++ b/app/src/main/res/layout/giphy_activity_toolbar.xml
@@ -7,7 +7,7 @@
                   android:layout_height="match_parent"
                   android:orientation="horizontal">
 
-        <ImageView android:id="@+id/action_icon"
+        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/action_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
@@ -39,17 +39,18 @@
                       android:layout_gravity="center_vertical"
                       android:gravity="center_vertical"/>
 
-            <ImageView android:id="@+id/search_clear"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_gravity="center_vertical"
-                       android:gravity="center_vertical"
-                       android:clickable="true"
-                       android:focusable="true"
-                       android:visibility="invisible"
-                       android:background="@drawable/circle_touch_highlight_background"
-                       android:tint="?conversation_subtitle_color"
-                       app:srcCompat="@drawable/ic_x" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/search_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="invisible"
+                android:background="@drawable/circle_touch_highlight_background"
+                android:tint="?conversation_subtitle_color"
+                app:srcCompat="@drawable/ic_x" />
 
             <org.thoughtcrime.securesms.components.AnimatingToggle
                     android:id="@+id/button_toggle"
