--- a/app/src/main/res/layout/link_preview.xml
+++ b/app/src/main/res/layout/link_preview.xml
@@ -86,7 +86,7 @@
             app:layout_constraintVertical_bias="0.0"
             tools:visibility="visible" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/linkpreview_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
