--- a/app/src/main/res/layout/sticker_management_sticker_item.xml
+++ b/app/src/main/res/layout/sticker_management_sticker_item.xml
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/sticker_management_share_button_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/sticker_management_action_button_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
