--- a/app/src/main/res/layout/insights_modal.xml
+++ b/app/src/main/res/layout/insights_modal.xml
@@ -7,7 +7,7 @@
     android:background="?insight_modal_background"
     android:orientation="vertical">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/insights_modal_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
