--- a/app/src/main/res/layout/message_details_recipient.xml
+++ b/app/src/main/res/layout/message_details_recipient.xml
@@ -81,7 +81,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:visibility="gone" />
 
-        <ImageView android:id="@+id/message_details_recipient_ud_indicator"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/message_details_recipient_ud_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
