--- a/app/src/main/res/layout/profile_create_fragment.xml
+++ b/app/src/main/res/layout/profile_create_fragment.xml
@@ -50,7 +50,7 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintVertical_chainStyle="spread_inside" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/avatar_background"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
@@ -62,7 +62,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/title"
                     app:layout_goneMarginTop="?attr/actionBarSize" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/avatar_placeholder"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
@@ -186,7 +186,7 @@
                     app:layout_constraintTop_toBottomOf="@id/profile_overview_username_label"
                     tools:visibility="visible" />
 
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/profile_overview_username_edit_button"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
