--- a/app/src/main/res/layout/recipient_manage_fragment.xml
+++ b/app/src/main/res/layout/recipient_manage_fragment.xml
@@ -209,7 +209,7 @@
                         android:textAlignment="viewStart"
                         android:textAppearance="@style/Signal.Text.Body" />
 
-                    <ImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/recipient_contact_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
