--- a/app/src/main/res/layout/recording_layout.xml
+++ b/app/src/main/res/layout/recording_layout.xml
@@ -11,7 +11,7 @@
     tools:visibility="visible"
     tools:showIn="@layout/conversation_input_panel">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/microphone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
