--- a/app/src/main/res/layout/unidentified_delivery_learn_more.xml
+++ b/app/src/main/res/layout/unidentified_delivery_learn_more.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical"
     android:padding="16dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
