--- a/app/src/main/res/layout/unknown_sender_view.xml
+++ b/app/src/main/res/layout/unknown_sender_view.xml
@@ -25,10 +25,10 @@
                   android:clickable="true"
                   android:gravity="center_vertical">
 
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/ic_block_white_24dp"
-                   android:tint="@color/core_ultramarine"/>
+        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
+                                                      android:layout_height="wrap_content"
+                                                      android:src="@drawable/ic_block_white_24dp"
+                                                      android:tint="@color/core_ultramarine"/>
 
         <TextView android:layout_marginStart="15dp"
                   android:layout_width="match_parent"
@@ -49,10 +49,10 @@
                   android:layout_marginBottom="25dp"
                   android:gravity="center_vertical">
 
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/ic_person_add_white_24dp"
-                   android:tint="@color/core_ultramarine"/>
+        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
+                                                      android:layout_height="wrap_content"
+                                                      android:src="@drawable/ic_person_add_white_24dp"
+                                                      android:tint="@color/core_ultramarine"/>
 
         <TextView android:layout_marginStart="15dp"
                   android:layout_width="match_parent"
@@ -73,10 +73,10 @@
                   android:layout_marginBottom="25dp"
                   android:gravity="center_vertical">
 
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/ic_face_white_24dp"
-                   android:tint="@color/core_ultramarine"/>
+        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content"
+                                                      android:layout_height="wrap_content"
+                                                      android:src="@drawable/ic_face_white_24dp"
+                                                      android:tint="@color/core_ultramarine"/>
 
         <TextView android:layout_marginStart="15dp"
                   android:layout_width="match_parent"
