--- a/app/src/main/res/values-night/signal_styles.xml
+++ b/app/src/main/res/values-night/signal_styles.xml
@@ -5,4 +5,8 @@
     </style>
 
     <style name="Signal.DayNight.Popup" parent="@style/ThemeOverlay.AppCompat.Dark" />
+
+    <style name="Signal.DayNight.Toolbar.Overflow" parent="@style/Signal.Toolbar.Overflow" />
+
+    <style name="Signal.DayNight.TitleTextStyle" parent="@style/TextSecure.TitleTextStyle.Dark" />
 </resources>
